# numba_pokemon_prngs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
numba_pokemon_prngs/: __init__.py  compatability.py  compilation.py  fnv.py  options.py  patch.py  rng_list.py  rnglist.py  sha1.py  util.py
numba_pokemon_prngs/data/: __init__.py  util.py
numba_pokemon_prngs/data/encounter/: __init__.py  encounter_area_3.py  encounter_area_la.py
numba_pokemon_prngs/data/fbs/: __init__.py  encounter_la.py  flatbuffer_object.py
numba_pokemon_prngs/data/personal/: __init__.py  personal_info.py
numba_pokemon_prngs/enums/: __init__.py  ds_type.py  encounter.py  game.py  la_area.py  la_time.py  la_weather.py  language.py  lead.py  method.py
numba_pokemon_prngs/gen3/: encounter_area_3.py  state.py  util.py  wild_generator_3.py
numba_pokemon_prngs/lcrng/: __init__.py  lcrng32.py  lcrng64.py
numba_pokemon_prngs/mersenne_twister/: __init__.py  mt.py  sfmt.py  tinymt.py
numba_pokemon_prngs/resources/encount/: __init__.py  e_wild_encounters.json  frlg_wild_encounters.json  rs_wild_encounters.json
numba_pokemon_prngs/resources/encount/la/: encounter_table_names.json
numba_pokemon_prngs/xorshift/: __init__.py  xoroshiro128plus.py  xorshift128.py
tests/: test_lcrng.py  test_mersenne_twister.py  test_sha1.py  test_xorshift.py
