[tool.poetry]
name = "numba-pokemon-prngs"
version = "0.1.0"
description = "Package for numba @jitclass implementations of the Pseudo-Random Number Generators used in the Pokemon series"
authors = ["lincoln-lm <73306575+Lincoln-LM@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "numba_pokemon_prngs"}]

[tool.poetry.dependencies]
python = ">= 3.9, < 3.11"
numpy = "^1.24.2"
numba = "^0.56.4"

[tool.poetry.group.dev.dependencies]
poetry = "^1.3.2"
black = "^23.1.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
